package edu.hitsz.aircraft;

import edu.hitsz.application.Main;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.bullet.EnemyBullet;
import edu.hitsz.strategy.CircleShootStrategy;
import java.util.LinkedList;
import java.util.List;

/**
 * Boss敌机类
 * 具有最高生命值、多阶段能力和特殊攻击模式
 */
public class BossEnemy extends AbstractEnemy {
    
    // 射击频率（帧数）
    private int shootFrequency;
    
    // 子弹威力
    private int power;
    
    // 战斗阶段（1-3）
    private int phase;
    
    // 特殊攻击冷却
    private int specialAttackCooldown;

    /**
     * Boss敌机构造函数
     * @param locationX 初始X坐标
     * @param locationY 初始Y坐标
     * @param speedX X轴速度
     * @param speedY Y轴速度
     * @param hp 生命值
     */
    public BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp, 100);
        this.shootFrequency = 20;
        this.power = 30;
        this.phase = 1;
        this.specialAttackCooldown = 0;
        this.shootStrategy = new CircleShootStrategy();
    }

    @Override
    public void forward() {
        // Boss敌机悬浮在屏幕上方，仅水平移动
        this.locationX += this.speedX;
        
        // 边界检测和反弹
        if (this.locationX <= 0 || this.locationX >= Main.WINDOW_WIDTH) {
            this.speedX = -this.speedX;
        }

        // 更新特殊攻击冷却
        if (specialAttackCooldown > 0) {
            specialAttackCooldown--;
        }
        
        // 检查阶段转换
        checkPhaseTransition();
    }

    @Override
    public List<BaseBullet> shoot() {
        // Boss敌机使用环射策略，单次发射20颗子弹
        return shootStrategy.shoot(this.getLocationX(), this.getLocationY(), this.getSpeedY(), 1, power);
    }

    /**
     * 检查并执行阶段转换
     */
    private void checkPhaseTransition() {
        if (phase == 1 && this.hp <= this.maxHp * 0.66) {
            changePhase(2);
        } else if (phase == 2 && this.hp <= this.maxHp * 0.33) {
            changePhase(3);
        }
    }

    /**
     * 改变战斗阶段
     * @param newPhase 新阶段（1-3）
     */
    public void changePhase(int newPhase) {
        if (newPhase >= 1 && newPhase <= 3 && newPhase != phase) {
            this.phase = newPhase;
            
            // 阶段转换时的能力提升
            if (phase == 2) {
                this.shootFrequency = 15; // 更快射击
                this.power = 40; // 更强威力
            } else if (phase == 3) {
                this.shootFrequency = 10; // 最快射击
                this.power = 50; // 最强威力
            }
        }
    }

    /**
     * 执行特殊攻击
     * @return 特殊攻击产生的子弹列表
     */
    public List<BaseBullet> specialAttack() {
        if (specialAttackCooldown <= 0) {
            specialAttackCooldown = 180; // 3秒冷却
            
            List<BaseBullet> specialBullets = new LinkedList<>();
            
            // 根据阶段执行不同的特殊攻击
            if (phase >= 2) {
                // 环形弹幕攻击
                int centerX = this.getLocationX();
                int centerY = this.getLocationY() + this.getHeight() / 2;
                
                for (int i = 0; i < 8; i++) {
                    double angle = i * Math.PI / 4;
                    int speedX = (int)(Math.cos(angle) * 5);
                    int speedY = (int)(Math.sin(angle) * 5 + 3);
                    specialBullets.add(new EnemyBullet(centerX, centerY, speedX, speedY, power * 2));
                }
            }
            
            return specialBullets;
        }
        
        return new LinkedList<>();
    }

    /**
     * 获取当前战斗阶段
     * @return 战斗阶段（1-3）
     */
    public int getPhase() {
        return phase;
    }

    /**
     * 获取射击频率
     * @return 射击频率（帧数）
     */
    public int getShootFrequency() {
        return shootFrequency;
    }

    /**
     * 获取子弹威力
     * @return 子弹威力
     */
    public int getPower() {
        return power;
    }

    @Override
    public void onBomb() {
        System.out.println("BossEnemy is immune to bomb.");
    }

    @Override
    public void onFreeze() {
        System.out.println("BossEnemy is immune to freeze.");
    }
}
